--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.data.mongodb.password=admin
 spring.data.mongodb.database=admin
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
+spring.security.user.name=user
+spring.security.user.password=82f16eda-3082-4c40-b2c5-8666756a94d1
